cdk.out/DockerVrisingCdkStack.template.json
{
 "Resources": {
  "VRisingTaskDefinitionTaskRoleB1DAE6B7": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VRisingTaskDefinition/TaskRole/Resource"
   }
  },
  "VRisingTaskDefinitionTaskRoleDefaultPolicy8970F5EB": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "cloudwatch:PutMetricData",
        "ecr:*",
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:DescribeLogGroups",
        "logs:DescribeLogStreams",
        "logs:PutLogEvents",
        "s3:*",
        "ssmmessages:CreateControlChannel",
        "ssmmessages:CreateDataChannel",
        "ssmmessages:OpenControlChannel",
        "ssmmessages:OpenDataChannel"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "VRisingTaskDefinitionTaskRoleDefaultPolicy8970F5EB",
    "Roles": [
     {
      "Ref": "VRisingTaskDefinitionTaskRoleB1DAE6B7"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VRisingTaskDefinition/TaskRole/DefaultPolicy/Resource"
   }
  },
  "VRisingTaskDefinition9BE36530": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "HealthCheck": {
       "Command": [
        "CMD",
        "sh",
        "-c",
        "ps -A | grep 'VRisingServer*' | grep -v grep"
       ],
       "Interval": 30,
       "Retries": 3,
       "StartPeriod": 300,
       "Timeout": 5
      },
      "Image": {
       "Fn::Join": [
        "",
        [
         "708286026751.dkr.ecr.us-west-2.",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/vrising-ubuntu-image:latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "VRisingServerLogGroupAF1D58E2"
        },
        "awslogs-stream-prefix": "VRisingContainerRepository",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "VRisingServerContainer",
      "PortMappings": [
       {
        "ContainerPort": 9876,
        "HostPort": 9876,
        "Protocol": "udp"
       },
       {
        "ContainerPort": 9876,
        "HostPort": 9876,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 9877,
        "HostPort": 9877,
        "Protocol": "udp"
       },
       {
        "ContainerPort": 9877,
        "HostPort": 9877,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 25575,
        "HostPort": 25575,
        "Protocol": "udp"
       },
       {
        "ContainerPort": 25575,
        "HostPort": 25575,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "2048",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "VRisingTaskDefinitionExecutionRole01EAB74B",
      "Arn"
     ]
    },
    "Family": "DockerVrisingCdkStackVRisingTaskDefinition4068CE96",
    "Memory": "4096",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "RuntimePlatform": {
     "OperatingSystemFamily": "LINUX"
    },
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "VRisingTaskDefinitionTaskRoleB1DAE6B7",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VRisingTaskDefinition/Resource"
   }
  },
  "VRisingTaskDefinitionExecutionRole01EAB74B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "aws-cdk:id",
      "Value": "DockerVrisingCdkStack_c8729c6056a80515f616a07e0a7be429f562fdd03e"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VRisingTaskDefinition/ExecutionRole/Resource"
   }
  },
  "VRisingTaskDefinitionExecutionRoleDefaultPolicyF9D6F091": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:ecr:us-west-2:708286026751:repository/vrising-ubuntu-image"
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "VRisingServerLogGroupAF1D58E2",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "VRisingTaskDefinitionExecutionRoleDefaultPolicyF9D6F091",
    "Roles": [
     {
      "Ref": "VRisingTaskDefinitionExecutionRole01EAB74B"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VRisingTaskDefinition/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "VRisingServerLogGroupAF1D58E2": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 30
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VRisingServerLogGroup/Resource"
   }
  },
  "vrisingsavebackups4FDFDEFC": {
   "Type": "AWS::S3::Bucket",
   "Properties": {
    "BucketName": "v-rising-save-backups"
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "RetainExceptOnCreate",
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/v-rising-save-backups/Resource"
   }
  },
  "vrisingserverlogsBB76730F": {
   "Type": "AWS::S3::Bucket",
   "Properties": {
    "BucketName": "v-rising-server-logs"
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "RetainExceptOnCreate",
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/v-rising-server-logs/Resource"
   }
  },
  "vrisingpersistentdatastore2BD31667": {
   "Type": "AWS::S3::Bucket",
   "Properties": {
    "BucketName": "v-rising-persistent-data-store"
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "RetainExceptOnCreate",
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/v-rising-persistent-data-store/Resource"
   }
  },
  "VrisingServerVPC86F47307": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/Resource"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet1Subnet777ED8F1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "VRisingServerPublic"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1/Subnet"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet1RouteTableE0A7E384": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1/RouteTable"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet1RouteTableAssociation1F245347": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet1RouteTableE0A7E384"
    },
    "SubnetId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet1Subnet777ED8F1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1/RouteTableAssociation"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet1DefaultRoute515E6028": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VrisingServerVPCIGW80631279"
    },
    "RouteTableId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet1RouteTableE0A7E384"
    }
   },
   "DependsOn": [
    "VrisingServerVPCVPCGW6506927A"
   ],
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1/DefaultRoute"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet1EIPC1C62361": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1/EIP"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet1NATGatewayFB9F607B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VrisingServerVPCVRisingServerPublicSubnet1EIPC1C62361",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet1Subnet777ED8F1"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VrisingServerVPCVRisingServerPublicSubnet1DefaultRoute515E6028",
    "VrisingServerVPCVRisingServerPublicSubnet1RouteTableAssociation1F245347"
   ],
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet1/NATGateway"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet2SubnetF8C8CFC7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "VRisingServerPublic"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2/Subnet"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet2RouteTable54C8A0AB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2/RouteTable"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet2RouteTableAssociationCB57D822": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet2RouteTable54C8A0AB"
    },
    "SubnetId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet2SubnetF8C8CFC7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2/RouteTableAssociation"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet2DefaultRoute2CA9FD99": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VrisingServerVPCIGW80631279"
    },
    "RouteTableId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet2RouteTable54C8A0AB"
    }
   },
   "DependsOn": [
    "VrisingServerVPCVPCGW6506927A"
   ],
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2/DefaultRoute"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet2EIP24CE5627": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2/EIP"
   }
  },
  "VrisingServerVPCVRisingServerPublicSubnet2NATGateway254AC7A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VrisingServerVPCVRisingServerPublicSubnet2EIP24CE5627",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet2SubnetF8C8CFC7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "VrisingServerVPCVRisingServerPublicSubnet2DefaultRoute2CA9FD99",
    "VrisingServerVPCVRisingServerPublicSubnet2RouteTableAssociationCB57D822"
   ],
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPublicSubnet2/NATGateway"
   }
  },
  "VrisingServerVPCVRisingServerPrivateSubnet1SubnetCF511EBD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "VRisingServerPrivate"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet1/Subnet"
   }
  },
  "VrisingServerVPCVRisingServerPrivateSubnet1RouteTable3F002C88": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet1/RouteTable"
   }
  },
  "VrisingServerVPCVRisingServerPrivateSubnet1RouteTableAssociationA4F188CA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VrisingServerVPCVRisingServerPrivateSubnet1RouteTable3F002C88"
    },
    "SubnetId": {
     "Ref": "VrisingServerVPCVRisingServerPrivateSubnet1SubnetCF511EBD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet1/RouteTableAssociation"
   }
  },
  "VrisingServerVPCVRisingServerPrivateSubnet1DefaultRouteB271463B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet1NATGatewayFB9F607B"
    },
    "RouteTableId": {
     "Ref": "VrisingServerVPCVRisingServerPrivateSubnet1RouteTable3F002C88"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet1/DefaultRoute"
   }
  },
  "VrisingServerVPCVRisingServerPrivateSubnet2Subnet497E2830": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "VRisingServerPrivate"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet2/Subnet"
   }
  },
  "VrisingServerVPCVRisingServerPrivateSubnet2RouteTable8D2C0AF5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet2/RouteTable"
   }
  },
  "VrisingServerVPCVRisingServerPrivateSubnet2RouteTableAssociation70A14464": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VrisingServerVPCVRisingServerPrivateSubnet2RouteTable8D2C0AF5"
    },
    "SubnetId": {
     "Ref": "VrisingServerVPCVRisingServerPrivateSubnet2Subnet497E2830"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet2/RouteTableAssociation"
   }
  },
  "VrisingServerVPCVRisingServerPrivateSubnet2DefaultRoute5F66617F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VrisingServerVPCVRisingServerPublicSubnet2NATGateway254AC7A6"
    },
    "RouteTableId": {
     "Ref": "VrisingServerVPCVRisingServerPrivateSubnet2RouteTable8D2C0AF5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VRisingServerPrivateSubnet2/DefaultRoute"
   }
  },
  "VrisingServerVPCIGW80631279": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "DockerVrisingCdkStack/VrisingServerVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/IGW"
   }
  },
  "VrisingServerVPCVPCGW6506927A": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VrisingServerVPCIGW80631279"
    },
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/VPCGW"
   }
  },
  "VrisingServerVPCRestrictDefaultSecurityGroupCustomResource52A96812": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "VrisingServerVPC86F47307",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VrisingServerVPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "VrisingServerVPC86F47307",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a",
    "aws:asset:property": "Code"
   }
  },
  "VRisingSecurityGroup0BAA5701": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Make V Rising Server accessible from the internet",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:UDP 9876",
      "FromPort": 9876,
      "IpProtocol": "udp",
      "ToPort": 9876
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:9876",
      "FromPort": 9876,
      "IpProtocol": "tcp",
      "ToPort": 9876
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:UDP 9877",
      "FromPort": 9877,
      "IpProtocol": "udp",
      "ToPort": 9877
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:9877",
      "FromPort": 9877,
      "IpProtocol": "tcp",
      "ToPort": 9877
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:25575",
      "FromPort": 25575,
      "IpProtocol": "tcp",
      "ToPort": 25575
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:UDP 25575",
      "FromPort": 25575,
      "IpProtocol": "udp",
      "ToPort": 25575
     }
    ],
    "VpcId": {
     "Ref": "VrisingServerVPC86F47307"
    }
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VRisingSecurityGroup/Resource"
   }
  },
  "VRisingServerCluster61732EE7": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/VRisingServerCluster/Resource"
   }
  },
  "ServiceD69D759B": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "VRisingServerCluster61732EE7"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "EnableExecuteCommand": true,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "VRisingSecurityGroup0BAA5701",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "VrisingServerVPCVRisingServerPublicSubnet1Subnet777ED8F1"
       },
       {
        "Ref": "VrisingServerVPCVRisingServerPublicSubnet2SubnetF8C8CFC7"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "VRisingTaskDefinition9BE36530"
    }
   },
   "DependsOn": [
    "VRisingTaskDefinitionTaskRoleDefaultPolicy8970F5EB",
    "VRisingTaskDefinitionTaskRoleB1DAE6B7"
   ],
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/Service/Service"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/21R22rCQBD9Ft/XbaNQ+qq2FaGUkBRfy2YzpmOSHdlLJIT8e3cTo23xac6cuTDnzIJHywWPZuJs5jIv5xVmvEutkCXz1FcH0vDuTehCWPgUpnyBAyq0SIptDuo/Q8oKVKB/c5UzFnTonuBlXQq6QQmhcoE9Q1HzLqFqYIcYU4WyDemIelZR4W96p2KryZ1CZcI9M0verZ0swQZ+RD0DqXkCJzJoSbdrYcBTC97tTzK07eMNi13mt6cuU+PoDSXkgvRsvGnkb9zKGJIoJkOGQgCvuziED2G3XupZtCzW2ATV18U75c3weGoYL7lkK+t/8F2DsiwF6TTa9ir3D9H3LAFDTgcnvb9U31J/z/1SrKnBHPRghZcA1r+8QFUMbyKVD7/rmaIc+NE8NNEzj5744+xoEOfaKYs18GSMPzdOthdDAgAA"
   },
   "Metadata": {
    "aws:cdk:path": "DockerVrisingCdkStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
